<resources>
    <string name="app_name">Newsfy</string>
    <string name="girl_reading">Girl Reading</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_your_name">Enter Name!</string>
    <string name="enter_email">Enter Email!</string>
    <string name="enter_your_password">Enter Password!</string>
    <string name="log_in">Log in</string>
    <string name="reset">Reset</string>
    <string name="check_your_email">Check your Email</string>
    <string name="reset_password">Reset your password</string>
    <string name="sign_out">Sign Out</string>
    <string name="refresh">Refresh</string>
    <string name="local_news">Local News</string>
    <string name="check_this_out">Check this out!</string>
    <string name="share_via">Share via...</string>
    <string name="news_sample">Is your iPhone getting blown up with spammy messages? Then you should probably update to iOS 13 if you haven’t already. iOS 13 includes a couple of new tools for blocking junk emails and robocalls, and carries over the iMessage blocking options from iOS 12. These make it easy to filter out unwanted messages at the source—whether from specific contacts or en masse. Even better, any numbers or email addresses you block from an iPhone will be blocked on your other Apple devices as well. Here’s how:
    Blocking unwanted email.First, you can block specific contacts from the iOS Mail app by opening a message and tapping the sender’s email address. Tap “Block This Contact” button.Next, go to Settings > Mail and turn on “Ignore Blocked Senders.”You can also go to Settings > Mail > Blocked to add to/manage your list of blocked contacts.Blocking unknown callersGo to Settings > phone and turn on “Silence Unknown Callers.” This disables ringing and notifications for calls from unknown numbers which should cut down on spam and robocalls, but be aware this could also block important calls from numbers you don’t have saved. It would be smart to turn this off if you’re expecting an important phone call from a number you don’t know or don’t have saved.</string>
    <string name="world_news">World News</string>
    <string name="read_full_article_here">Read full article here</string>
    <string name="sample_news">Google might be in trouble for this</string>
    <string name="log_in_successful">Sign in successful</string>
    <string name="account_created">Account Created</string>
    <string name="account_not_created">Account could not be created :(</string>
    <string name="check_password">Check Password!</string>
    <string name="check_email">Check Email!</string>
    <string name="confirm_password">Confirm Password!</string>
    <string name="enter_details">Enter Details</string>
    <string name="try_again">Try again</string>
    <string name="create_free_account">Create Free Account</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="need_an_account">Need a Newsfy account?</string>
    <string name="email_address_hint">name@email.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in_to_account">Log in to your account</string>
    <string name="quote">“Reading is essential for those who seek to rise above the ordinary.” – Jim Rohn</string>
</resources>
