<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="15dp"
            android:background="@color/black"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_horizontal"
                    android:text="@string/log_in_to_account"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/email_address"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/email_sign_in_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#DAE0E2"
                    android:drawableEnd="@drawable/mail_outline_black"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/email_address_hint"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/password_sign_in_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#DAE0E2"
                    android:drawableEnd="@drawable/lock_outline_black"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/forgot_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/forgot_password"
                    android:textColor="#D82C29"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/login_button"
                    android:onClick="loginClick"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:elevation="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/need_an_account"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/create_account_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:onClick="createAccountClick"
                        android:text="@string/create_an_account"
                        android:textColor="@color/red"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/contrail_one"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/quote"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>

</ScrollView>