<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="15dp"
        android:background="@color/black"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_medium"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/reset_password"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email_address"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/reset_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#DAE0E2"
                android:drawableEnd="@drawable/email_black"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/reset_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:elevation="5dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>